# Notes

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
db/: init.sql
migrations/: 20210605133717_create_notes_table.sql
src/: lib.rs  main.rs
src/database/: mod.rs  notes.rs  prelude.rs
src/db/: mod.rs  notes.rs  prelude.rs
src/models/: task.rs
src/routes/: create_task.rs  delete_task.rs  get_tasks.rs  mod.rs  update_tasks.rs
tests/: integration_tests.rs
